Sat Feb 16 15:14:30 CET 2002 peter karlsson <peterk@debian.org>

  * man/sv/deb-control.5, deb-old.5, deb.5, dpkg-split.8,
    start-stop-daemon.8: Fixed CVS revision pointers after move and
    updated translations to match latest versions.
  * man/sv/dpkg.cfg.5, man/sv/dselect.cfg.5: Translated new files.
  * man/en/dselect.cfg.5: Fixed numerous copy'n'paste errors.

Sun Feb 10 01:31:57 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * man/en/dselect.cfg.5, man/en/dpkg.cfg.5: new files
  * man/en/Makefile.in: install new manpages

Sun Feb 10 01:16:58 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * scripts/update-alternatives.pl: Improve working of --config output

Thu Feb  7 15:27:35 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * main/processarc.c: copy origin and bugs info into status file

Thu Feb  7 00:38:42 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * po/pt_BR.po: Fix bogosity in previous update

Thu Feb  7 00:28:35 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * scripts/update-alternatives.pl: fix logic error, alternatives are
    now correctly restored to auto when removing a manually selected
    alternative

Wed Feb  6 12:29:18 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * dselect/method.cc: check fgetc() for EOF return so we don't spin
    if we can't read input

Sun Feb  3 22:21:08 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * po/fr.po: Updated

Sun Feb  3 20:44:20 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * po/pt_BR.po: Updated

Sun Feb  3 01:50:02 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * doc/reference.sgml: new file

Sat Feb  2 23:00:25 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * More imports from v1_9
  * debian/changelog: add changes from 1.9.18 and 1.9.19
  * debian/dpkg.conffiles: Mark /etc/alternatives/README as a conffile.
  * debian/control: Changed maintainer to debian-dpkg@lists and add Uploaders
  * main/processarc.c: Fix MD5Sum corruption when upgrading a package, and