@@ -83,6 +83,7 @@ dpkg (1.10) unstable; urgency=low
   * Copy bugs and origin information into status file. Closes: Bug#132714
   * Improve wording of update-alternatives --config text. Closes: Bug#133035
   * Add manpages for dpkg.cfg and dselect.cfg. Closes: Bug#132901
+  * Improve test for illegal packagename for dpkg-gencontrol -p option
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
