@@ -1,3 +1,8 @@
+Mon Feb 25 15:22:34 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-gencontrol.pl: Fix test for incorrect packagename
+    for -p option.
+
 Sat Feb 16 15:14:30 CET 2002 peter karlsson <peterk@debian.org>
 
   * man/sv/deb-control.5, deb-old.5, deb.5, dpkg-split.8,
@@ -5,6 +10,10 @@ Sat Feb 16 15:14:30 CET 2002 peter karlsson <peterk@debian.org>
     updated translations to match latest versions.
   * man/sv/dpkg.cfg.5, man/sv/dselect.cfg.5: Translated new files.
   * man/en/dselect.cfg.5: Fixed numerous copy'n'paste errors.
+
+Sun Feb 10 01:40:52 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * utils/start-stop-daemon.c: add FreeBSD support
 
 Sun Feb 10 01:31:57 CET 2002 Wichert Akkerman <wakkerma@debian.org>
 
